--- a/frontEnd/paginas/index.html
+++ b/frontEnd/paginas/index.html
@@ -4,70 +4,106 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel Consagrado</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" href="../estilo/navFotter.css">
+    <link rel="stylesheet" href="../estilo/mobile.css">
+    <link rel="stylesheet" href="../estilo/desktop.css">
+    <style>
+    </style>
 </head>
 <body>
     <header>
         <img src="../imagens/logoHotel.png" alt="Logo do hotel">
         <nav>
             <a href="index.html">Home</a>
-            <a href="#">Sobre</a>
-            <a href="#">Reservas</a>
-            <a href="#">Hóspedes</a>
+            <a href="sobre.html">Sobre</a>
+            <a href="reservas.html">Reservas</a>
+            <a href="hospedes.html">Hóspedes</a>
         </nav>
     </header>
     <main>
         <section class="principal">
             <h1>Conheça este paraíso de hotel</h1>
             <p>"Aconchego, conforto, simpatia e alto astral"</p>
-            <a href="#">SAIBA MAIS</a>
+            <a href="sobre.html">SAIBA MAIS</a>
         </section>
-        <section class="conheca-o-hotel">
-            <h3>Conheça o Hard Rock Hotel!</h3>
+        <section class="carrossel">
+            <h2>Conheça o Hotel Consagrado!</h2>
             <p>Feche os olhos e imagine o paraíso. Um lugar no meio da Mata Atlântica e banhado pelo mar, onde você encontra paz, tranquilidade, conforto e comodidade.</p>
             <hr>
-            <ul class="grid">
-                <li class="small" id="imagem-1"></li>
-                <li class="large" id="imagem-2"></li>
-                <li class="large" id="imagem-3"></li>
-                <li class="small" id="imagem-4"></li>
-            </ul>
+            <div class="slider">
+                <div class="slides">
+                    <input type="radio" name="radio-btn" id="radio1">
+                    <input type="radio" name="radio-btn" id="radio2">
+                    <input type="radio" name="radio-btn" id="radio3">
+                    <input type="radio" name="radio-btn" id="radio4">
+                    
+                    <div class="slide first">
+                        <img src="../imagens/imagem1.jpg" alt="foto praia">
+                    </div>
+                    <div class="slide">
+                        <img src="../imagens/imagem2.jpg" alt="foto praia">
+                    </div>
+                    <div class="slide">
+                        <img src="../imagens/imagem3.jpg" alt="foto praia">
+                    </div>
+                    <div class="slide">
+                        <img src="../imagens/imagem4.jpg" alt="foto praia">
+                    </div>
+
+                    <div class="navigation-auto">
+                        <div class="auto-btn1"></div>
+                        <div class="auto-btn2"></div>
+                        <div class="auto-btn3"></div>
+                        <div class="auto-btn4"></div>
+                    </div>
+                </div>
+            </div>
         </section>
-        <section class="caracteristicas">
-            <h3>Único hotel pé na areia de Itacaré!</h3>
-            <p>Implantado em uma área completamente arborizada, o Hard Rock Hotel é único hotel pé na areia de Itacaré. Aqui o mar será o seu companheiro e você terá as belezas da natureza como paisagem.</p>
-            <hr>
-            <ul class="grid">
-                <li>
-                    <span class="material-symbols-outlined">pin_drop</span>
-                    <h4>Localização</h4>
+        <section class="informacoes">
+            <div class="grid-interna0">
+                <h2>Único hotel pé na areia de Itacare</h2>
+                <p>Implantado em uma área completamente arborizada, o Hard Rock Hotel é único hotel pé na areia de Itacaré. Aqui o mar será o seu companheiro e você terá as belezas da natureza como paisagem.</p>
+            </div>
+
+            <div class="grid">
+                <div class="grid-interna">
+                    <span class="material-symbols-outlined" style="font-size: 2.2em;">
+                        pin_drop
+                    </span>
+                    <h3>Localização</h3>
                     <p>Localizada no Sul da Bahia, entre o mar da Mata Atlântica, Itacaré tem refrescantes cachoeiras, prais belíssimas, muitas delas tão pequenas que nem aparecemnos mapas</p>
-                </li>
-                <li>
-                    <span class="material-symbols-outlined">featured_seasonal_and_gifts</span>
-                    <h4>Pacote de ofertas</h4>
+                </div>
+                <div class="grid-interna">
+                    <span class="material-symbols-outlined" style="font-size: 2.2em;">
+                        featured_seasonal_and_gifts
+                    </span>
+                    <h3>Pacote de ofertas</h3>
                     <p>Sabe aquele descontraído encontro com a fámilia e amigos? Ou um momento relax? Nosso Hotel conta com uma diversidade de espaços que proporcionam momentos inesquecíveis.</p>
-                </li>
-                <li>
-                    <span class="material-symbols-outlined">house</span>
-                    <h4>Acomodações</h4>
-                    <p>Hard Rock Hotel possui 29 unidades, divididas entre 11 cháles, 16 amplas suítes e 2 chácaras, todas com TV a cabo, frigobar, além de varanda com rede.</p>
-                </li>
-            </ul>
+                </div>
+                <div class="grid-interna">
+                    <span class="material-symbols-outlined" style="font-size: 2.2em;">
+                        home
+                    </span>
+                    <h3>Acomodações</h3>
+                    <p>Hotel Consagrado possui 29 unidades, divididas entre 11 cháles, 16 amplas suítes e 2 chácaras, todas com TV a cabo, frigobar, além de varanda com rede.</p>
+                </div>
+            </div>
         </section>
-        <section class="newsletter">
-            <h3>Newsletter</h3>
-            <p>Assine nossa newsletter para se manter atualizado com nossos serviços, programação de passeios culturais e descontos.</p>
+        <aside class="newsletter">
+            <h2>Newsletter</h2>
+            <p>Assine nossa newsletter para se manter atualizado como nossos seviços, programação de passeios culturais e descontos</p>
             <hr>
 
-            <form action="#">
-                <input type="email" name="email" id="iemail" placeholder="Email">
-                <input type="submit" value="Cadastrar" id="botao-envio">
-            </form>
-        </section>
+            <div class="email">
+                <input type="email" name="email" id="iemail" placeholder="e-mail">
+                <input type="submit" value="CADASTRAR" class="enviar">
+            </div>
+        </aside>
+      
     </main>
     <footer>
-        <p>Site criado apenas para estudo</p>
+        <p>Site criado apenas para estudo pessoal.</p>
     </footer>
 </body>
 </html>
