Terminando front e entendendo API

--- a/frontEnd/paginas/index.html
+++ b/frontEnd/paginas/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel Consagrado</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="../estilo/navFotter.css">
-    <link rel="stylesheet" href="../estilo/mobile.css">
-    <link rel="stylesheet" href="../estilo/desktop.css">
+    <link rel="stylesheet" href="../css/navFotter.css">
+    <link rel="stylesheet" href="../css/mobile.css">
+    <link rel="stylesheet" href="../css/desktop.css">
     <style>
     </style>
 </head>
@@ -100,10 +100,12 @@
                 <input type="submit" value="CADASTRAR" class="enviar">
             </div>
         </aside>
-      
+        
     </main>
     <footer>
         <p>Site criado apenas para estudo pessoal.</p>
     </footer>
+
+    <script src="../scripts/carrossel.js"></script>
 </body>
 </html>
