--- a/frontEnd/paginas/sobre.html
+++ b/frontEnd/paginas/sobre.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../estilo/navFotter.css">
-    <link rel="stylesheet" href="../estilo/sobre.css">
+    <link rel="stylesheet" href="../css/navFotter.css">
+    <link rel="stylesheet" href="../css/sobre.css">
     <title>Sobre</title>
 </head>
 <body>
@@ -68,6 +68,5 @@
             <footer>
                 <p>Site criado apenas para estudo pessoal.</p>
             </footer>
-            <script src="../scripts/chatbot.js"></script>
 </body>
 </html>
