--- a/frontEnd/paginas/hospedes.html
+++ b/frontEnd/paginas/hospedes.html
@@ -8,7 +8,6 @@
     <title>Hóspedes - Hotel Consagrado</title>
     <link rel="stylesheet" href="../css/navFotter.css">
     <link rel="stylesheet" href="../css/contato.css">
-    <link rel="stylesheet" href="../css/chatbot.css">
     <style>
         .table-container {
             display: flex;
@@ -136,11 +135,11 @@
                 </tbody>
             </table>
         </div>
-        
     </main>
     <footer>
         <p>Site criado apenas para estudo pessoal</p>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="../scripts/tabela.js"></script>
 </body>
 </html>
